k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: project-backend-service
  namespace: mvp-project
spec:
  ports:
    - name: https
      port: 8080
      protocol: TCP
      targetPort: 8080
  sessionAffinity: None
  type: ClusterIP
