k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: project-backend-route
  namespace: mvp-project
spec:
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: Service
    name: project-backend-service
    weight: 100
  wildcardPolicy: None
